--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ h1 {
     color: #2b1a1a;
 }
 
+h2{
+    margin-bottom: 1em;
+    margin-top: 1em;
+    text-align: center;
+}
+
+h3{
+    font-size: 1.2em;
+    line-height: 1.3;
+    margin-bottom: .5em;
+}
 
 
 hr {
@@ -33,14 +44,26 @@ a, a:hover, a:active, a:visited {
     background-color: transparent;
 }
 
-ul {
+.head-container ul {
     list-style: none;
 }
 
-li {
+.head-container li {
     display: inline-block;
     padding: 0 0 0 1em;
 }
+
+#resume ul {
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+
+#resume li {
+    list-style-type: square;
+    font-size: 16px;
+    line-height: 1.6em;
+}
+
 
 .container{
     max-width: 1022px;
@@ -63,6 +86,13 @@ li {
 .p-right {
     float: right;
 }
+
+#resume{
+    max-width: 60%;
+    margin: auto;
+}
+
+
 
 @media screen and (max-width: 760px) {
 
@@ -94,12 +124,16 @@ li {
         padding: 3px 0 8px 0;
     }
 
-    li {
+    .head-container li {
         padding: 0 0 0 1em;
     }
 
-    li:first-child {
+    .head-container li:first-child {
         padding: 0 0 0 0em;
+    }
+
+    #resume{
+        max-width: 95%;
     }
 }
 
